Add compact view toggle

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <span id="difficultyBadge" class="badge-pill diff-badge">⚔ Normal</span>
       <span id="variantBadge" class="badge-pill variant-badge visible">Variants: None</span>
       <div class="hud-controls">
+        <button id="compactToggleBtn" class="ghost compact-toggle" aria-label="Toggle compact view" aria-pressed="false">
+          Compact
+        </button>
         <button id="menuToggleBtn" class="ghost menu-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
       </div>
     </header>
