Make compact layout default

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="data:image/x-icon;base64,AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAGAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=">
   <link rel="stylesheet" href="styles.css">
-
 </head>
-<body>
+<body class="compact-view">
   <div class="ambient"></div>
   <main class="app-shell">
     <header class="hud">
@@ -22,9 +21,6 @@
       <span id="difficultyBadge" class="badge-pill diff-badge">⚔ Normal</span>
       <span id="variantBadge" class="badge-pill variant-badge visible">Variants: None</span>
       <div class="hud-controls">
-        <button id="compactToggleBtn" class="ghost compact-toggle" aria-label="Toggle compact view" aria-pressed="false">
-          Compact
-        </button>
         <button id="menuToggleBtn" class="ghost menu-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
       </div>
     </header>
