Add animated store overlay

--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
 
   <div id="storeModal" class="store-modal" aria-hidden="true">
     <div class="store-shell">
+      <img id="storeMerchImage" class="store-merch" src="npc/merch.png" alt="Merchant" />
       <div class="store-head">
         <span>Merchant's Camp</span>
         <button id="storeCloseBtn" class="ghost small" type="button">Close</button>
