Add dev control for hand stack cap

--- a/index.html
+++ b/index.html
@@ -253,6 +253,13 @@
           </div>
         </label>
         <label>
+          Hand Stack Cap (enemy kills)
+          <div class="lever-row">
+            <input type="range" class="lever" id="devHandStackCap" min="0" max="10" step="1" value="5" />
+            <span class="lever-value" id="devHandStackCapVal">+5 → 10 cards</span>
+          </div>
+        </label>
+        <label>
           Lore Override
           <div class="lever-row">
             <input type="range" class="lever" id="devLoreOverride" min="0" max="20" step="1" value="0" />
