--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@
 
     <section class="layout">
       <article class="panel dungeon" id="dungeonCard">
+        <div class="fx-layer" aria-hidden="true"></div>
 
         <!-- Enemy row: art + stats side-by-side -->
         <div class="enemy-row">
           <div id="roomEvent" class="room-event" aria-live="polite"></div>
           <div class="enemy-portrait-shell">
+            <div class="fx-layer" aria-hidden="true"></div>
             <img id="enemyPortrait" class="enemy-portrait hidden" alt="" />
           </div>
 
           <div id="enemySummary" class="enemy-dash">
+            <div class="fx-layer" aria-hidden="true"></div>
             <div class="badge-row">
               <span class="badge-pill badge-danger">Danger</span>
             </div>
@@ -83,6 +86,30 @@
             <span class="chip-count">0</span>
           </span>
         </div>
+        <div id="teamGambitRow" class="gambit-row">
+          <div class="gambit-row-head">
+            <strong>Team Gambit</strong>
+            <span class="muted gambit-note">Once per room</span>
+          </div>
+          <div class="gambit-controls">
+            <label class="sr-only" for="gambitTarget">Gambit target</label>
+            <select id="gambitTarget">
+              <option value="">Declare target</option>
+              <option value="pair">Pair</option>
+              <option value="twoPair">Two Pair</option>
+              <option value="threeKind">Three of a Kind</option>
+              <option value="straight">Straight</option>
+              <option value="flush">Flush</option>
+              <option value="fullHouse">Full House</option>
+              <option value="fourKind">Four of a Kind</option>
+              <option value="straightFlush">Straight Flush</option>
+            </select>
+            <button id="gambitDeclare" type="button" class="ghost small">Declare Gambit</button>
+            <button id="gambitSuccess" type="button" class="primary small" disabled>Resolve Success</button>
+            <button id="gambitFail" type="button" class="ghost small" disabled>Resolve Fail</button>
+          </div>
+          <div id="gambitCurseInfo" class="gambit-curse-info">No curse active.</div>
+        </div>
         <div id="playersContainer" class="players-grid"></div>
       </article>
 
@@ -95,6 +122,8 @@
       </article>
     </section>
   </main>
+
+  <div id="doorOverlay" aria-hidden="true"></div>
 
   <div id="menuPanel" class="menu-panel" aria-hidden="true">
     <div class="menu-inner">
@@ -115,6 +144,20 @@
               <option value="3">3</option>
               <option value="4">4</option>
             </select>
+          </label>
+          <label class="menu-label" for="humanPlayers">
+            Human players
+            <select id="humanPlayers">
+              <option value="0" selected>0</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+            </select>
+          </label>
+          <label class="menu-checkbox">
+            <input type="checkbox" id="startAiAssist" />
+            Auto-play remaining heroes with AI
           </label>
           <div class="difficulty-controls" id="difficultyControls">
             <div class="label">Difficulty</div>
@@ -152,6 +195,7 @@
       </div>
       <div class="menu-section">
         <div class="menu-buttons">
+          <button id="tutorialBtn" class="ghost small" aria-label="Tutorial">Tutorial</button>
           <button id="rulesBtn" class="ghost small" aria-label="Rules">Rules</button>
           <button id="logToggleBtn" class="ghost small">Log</button>
           <button id="devToggle" class="ghost dev-toggle" aria-label="Toggle Dev Panel">⚙︎ Dev</button>
@@ -199,15 +243,15 @@
         <label>
           Enemy Base Damage
           <div class="lever-row">
-            <input type="range" class="lever" id="devEnemyDamage" min="-5" max="25" step="1" value="0" />
-            <span class="lever-value" id="devEnemyDamageVal">0</span>
+            <input type="range" class="lever" id="devEnemyDamage" min="-5" max="25" step="1" value="-3" />
+            <span class="lever-value" id="devEnemyDamageVal">-3</span>
           </div>
         </label>
         <label>
           Enemy Hit Chance
           <div class="lever-row">
-            <input type="range" class="lever" id="devEnemyHit" min="-0.5" max="1" step="0.05" value="0" />
-            <span class="lever-value" id="devEnemyHitVal">0</span>
+            <input type="range" class="lever" id="devEnemyHit" min="-0.5" max="1" step="0.05" value="-0.1" />
+            <span class="lever-value" id="devEnemyHitVal">-0.10</span>
           </div>
         </label>
         <label>
@@ -218,38 +262,45 @@
           </div>
         </label>
         <label>
+          Depth Scaling
+          <div class="lever-row">
+            <input type="range" class="lever" id="devDepthScale" min="0" max="2" step="0.05" value="0.2" />
+            <span class="lever-value" id="devDepthScaleVal">×0.20</span>
+          </div>
+        </label>
+        <label>
           Hero HP Modifier
           <div class="lever-row">
-            <input type="range" class="lever" id="devHeroHpMod" min="-15" max="20" step="1" value="0" />
-            <span class="lever-value" id="devHeroHpModVal">0</span>
+            <input type="range" class="lever" id="devHeroHpMod" min="-15" max="20" step="1" value="2" />
+            <span class="lever-value" id="devHeroHpModVal">2</span>
           </div>
         </label>
         <label>
           Recover Strength
           <div class="lever-row">
-            <input type="range" class="lever" id="devRecoverStrength" min="0.5" max="3" step="0.1" value="1" />
-            <span class="lever-value" id="devRecoverStrengthVal">1</span>
+            <input type="range" class="lever" id="devRecoverStrength" min="0.5" max="3" step="0.1" value="1.6" />
+            <span class="lever-value" id="devRecoverStrengthVal">1.6</span>
           </div>
         </label>
         <label>
           Combo Damage Curve
           <div class="lever-row">
-            <input type="range" class="lever" id="devComboCurve" min="0.5" max="2" step="0.05" value="1" />
-            <span class="lever-value" id="devComboCurveVal">1.00</span>
+            <input type="range" class="lever" id="devComboCurve" min="0.5" max="2" step="0.05" value="1.2" />
+            <span class="lever-value" id="devComboCurveVal">1.20</span>
           </div>
         </label>
         <label>
           Coin Gain Multiplier
           <div class="lever-row">
-            <input type="range" class="lever" id="devCoinGainMultiplier" min="0" max="5" step="0.25" value="1" />
-            <span class="lever-value" id="devCoinGainMultiplierVal">1.00</span>
+            <input type="range" class="lever" id="devCoinGainMultiplier" min="0" max="5" step="0.25" value="1.25" />
+            <span class="lever-value" id="devCoinGainMultiplierVal">1.25</span>
           </div>
         </label>
         <label>
           Guard Multiplier
           <div class="lever-row">
-            <input type="range" class="lever" id="devGuardEffectiveness" min="0.5" max="3" step="0.1" value="1" />
-            <span class="lever-value" id="devGuardEffectivenessVal">1</span>
+            <input type="range" class="lever" id="devGuardEffectiveness" min="0.5" max="3" step="0.1" value="1.2" />
+            <span class="lever-value" id="devGuardEffectivenessVal">1.2</span>
           </div>
         </label>
         <label>
@@ -262,15 +313,15 @@
         <label>
           Lore Override
           <div class="lever-row">
-            <input type="range" class="lever" id="devLoreOverride" min="0" max="20" step="1" value="0" />
-            <span class="lever-value" id="devLoreOverrideVal">auto</span>
+            <input type="range" class="lever" id="devLoreOverride" min="0" max="20" step="1" value="8" />
+            <span class="lever-value" id="devLoreOverrideVal">8</span>
           </div>
         </label>
         <label>
           Insight Override
           <div class="lever-row">
-            <input type="range" class="lever" id="devInsightOverride" min="0" max="5" step="1" value="0" />
-            <span class="lever-value" id="devInsightOverrideVal">auto</span>
+            <input type="range" class="lever" id="devInsightOverride" min="0" max="5" step="1" value="3" />
+            <span class="lever-value" id="devInsightOverrideVal">3</span>
           </div>
         </label>
         <label>
@@ -280,8 +331,8 @@
         <label>
           Underdog Threshold
           <div class="lever-row">
-            <input type="range" class="lever" id="devUnderdogThreshold" min="5" max="18" step="1" value="10" />
-            <span class="lever-value" id="devUnderdogThresholdVal">10</span>
+            <input type="range" class="lever" id="devUnderdogThreshold" min="5" max="18" step="1" value="12" />
+            <span class="lever-value" id="devUnderdogThresholdVal">12</span>
           </div>
         </label>
         <label>
@@ -308,14 +359,15 @@
       </label>
       <div id="devChipReadout" class="readout">Party Chips: 0</div>
     </div>
-    <div class="dev-section">
-      <h4>RNG & Simulation</h4>
-      <div id="devDungeonInfo" class="readout"></div>
-      <button id="devRerollDungeon">Reroll Before Start</button>
-      <button id="devQuickSim">Quick Sim ×10</button>
-      <div id="devSimResult" class="readout"></div>
-    </div>
-  </aside>
+      <div class="dev-section">
+        <h4>RNG & Simulation</h4>
+        <div id="devDungeonInfo" class="readout"></div>
+        <button id="devRerollDungeon">Reroll Before Start</button>
+        <button id="devQuickSim">Quick Sim ×10</button>
+        <button id="devPlayAiToggle" class="ghost small">Play with AI (auto-run)</button>
+        <div id="devSimResult" class="readout"></div>
+      </div>
+    </aside>
 
   <div id="storeModal" class="store-modal" aria-hidden="true">
     <div class="store-shell">
@@ -353,7 +405,7 @@
       </ul>
       <h3>Turn Flow</h3>
       <ol>
-        <li>Pick an action (Attack / Recover / Guard / Hold).</li>
+        <li>Pick an action (Attack / Recover / Guard).</li>
         <li>Select the poker hand you played.</li>
         <li>Tap Resolve to apply effects.</li>
       </ol>
@@ -362,7 +414,6 @@
         <li>Attack: hand determines damage.</li>
         <li>Recover: heal self instead of attacking.</li>
         <li>Guard: mitigate enemy damage with combos.</li>
-        <li>Hold: save cards, no action.</li>
       </ul>
       <h3>Lore (Insight)</h3>
       <ul>
@@ -401,6 +452,28 @@
         <li><strong>Option 2: App Coin Tracker</strong> — the app records each hero's coins, auto-adds rewards, and auto-deducts Store purchases.</li>
       </ul>
       <p class="muted-note">Dev Panel is for testing only and can change numbers mid-run.</p>
+    </div>
+  </div>
+  <div id="tutorialOverlay" class="overlay" aria-hidden="true">
+    <div class="overlay-content tutorial-shell">
+      <div class="panel-head">
+        <span>How to Play</span>
+        <button id="tutorialCloseBtn" class="overlay-close ghost" type="button">Skip</button>
+      </div>
+      <div class="tutorial-body">
+        <div class="tutorial-step-meta">
+          <span id="tutorialStepCount">Step 1 of 1</span>
+          <span class="badge-pill">First Run</span>
+        </div>
+        <h3 id="tutorialStepTitle" class="tutorial-step-title">Round Flow</h3>
+        <p id="tutorialStepBody" class="tutorial-step-body">Assign actions, play hands, then resolve.</p>
+        <ul id="tutorialStepList" class="tutorial-step-list"></ul>
+      </div>
+      <div class="tutorial-nav">
+        <button id="tutorialPrevBtn" class="ghost small" type="button">Back</button>
+        <div id="tutorialDots" class="tutorial-dots" aria-hidden="true"></div>
+        <button id="tutorialNextBtn" class="primary" type="button">Next</button>
+      </div>
     </div>
   </div>
   <div id="runOverlay" class="overlay run-overlay" aria-hidden="true">
